--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -786,7 +786,7 @@ section {
   pointer-events: none;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  padding: 10px;
+  padding: 10px 150px 10px 10px;
   min-height: 120px;
 }
 
